# Task_Manager_Application

./: CMakeLists.txt  README.md  addtask.cpp  addtask.h  addtask.ui  deletetask.cpp  deletetask.h  deletetask.ui  displayalltask.cpp  displayalltask.h  displayalltask.ui  generatereport.cpp  generatereport.h  generatereport.ui  gettask.cpp  gettask.h  gettask.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  updatetask.cpp  updatetask.h  updatetask.ui
src/Model/: idsequence.cpp  idsequence.h  task.cpp  task.h  taskqtmodel.cpp  taskqtmodel.h  tasktablemodel.cpp  tasktablemodel.h
src/Repository/: task_record_2024-05-19.txt  task_record_2024-06-25.txt  task_record_2024-06-26.txt  temp.txt
src/Service/: fileutils.cpp  fileutils.h  strutils.cpp  strutils.h  taskservice.cpp  taskservice.h
